	  (genFunction, genEndFunction): save bits exactly once, fix bug 1535242
	* support/regression/tests/bug1535242.c: new, added
	* device/include/assert.h: applied patch 1686533 to fix bug 1686528,
	  thanks Alexey Shamrin <shamrin AT gmail.com>,
	  made assert.h header ANSI compliant (added a check for NDEBUG macro,
	  removed header guard)
	* .version,
	* sdcc.spec: bumped version to 2.6.5

2007-03-22 Borut Razem <borut.razem AT siol.net>

	* debugger/mcs51/cmd.c, debugger/mcs51/sdcdb.c:
	  fixed bug #1653671: sdcdb integration into ddd is broken

2007-03-22 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (popGetExternal): augmented to also create references
	  to external variables (not only labels),
	  (genCall): comment on plan to reduce PAGESEL overhead,
	  (genFunction, genEndFunction): also save/restore FSR around interrupt
	  handling code, removed lots of unused code
	  (genDivOneByte): release acquired temp register
	* src/pic/glue.c (pic14createInterruptVect): adadt to new signature
	  of popGetExternal
	* device/lib/pic/libsdcc/shadowregs.c: NEW, provide storage location
	  for registers that need to be saved during interrupts (FSR, STATUS,
	  PCLATH; W needs special handling), currently only FSR is used

2007-03-22 Raphael Neider <rneider AT web.de>

	* device/include/pic/pic14devices.txt: 16f688 has only one config word

2007-03-19 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* /as/link/mcs51/aslink.dsp: Object extension for mcs51 is 'rel' not 'o'.

2007-03-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/peeph.def (263.x): fixed bug for volatile variables

2007-03-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/link/aslink.h: added LKOBJEXT
	* as/link/hc08/link_hc08.dsp,
	* as/link/hc08/Makefile.bcc,
	* as/link/hc08/Makefile.in,
	* as/link/mcs51/aslink.dsp,
	* as/link/mcs51/Makefile.bcc,
	* as/link/mcs51/Makefile.in: moved lkamof51.c and lkdata.c
	* as/link/hc08/lkaomf51.c,      as/link/mcs51/lkaomf51.c,